--- a/index.html
+++ b/index.html
@@ -6,7 +6,55 @@
 </head>
 <body>
 
-	<h1>Hi world this is a test</h1>
+	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
+
+		<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+
+		<p>55 to 65 days are needed from germination to harvest of the root.</p>
+
+		<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+
+		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
+		<cite>— Jim Halpert</cite></blockquote>
+
+		<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
+		<cite>— Chris Pratt</cite></blockquote>
+
+		<h2>Common varieties</h2>
+
+		<ol>
+			<li>Albino</li>
+			<li>Bull’s Blood</li>
+			<li>Chioggia</li>
+			<li>Detroit Dark Red</li>
+			<li>Early Wonder</li>
+		</ol>
+
+		<h2>Nutritional information</h2>
+
+			<p>Serving size: 100 g</p>
+			<dl>
+				<dd>Energy:</dd>
+					<dt>180 kJ</dt>
+				<dd>Carbohydrates:</dd>
+					<dt>9.96 g</dt>
+				<dd>Fat:</dd>
+					<dt>0.18 g</dt>
+				<dd>Protein:</dd>
+					<dt>1.68 g</dt>
+			</dl>
+
+		<h2>Tags</h2>
+		<ul>
+			<li><a>Crimson</a></li>
+			<li><a>Awesome</a></li>
+			<li><a>Pickle-able</a></li>
+			<li><a>Vegetable!</a></li>
+			<li><a>Delicious</a></li>
+		</ul>
+
+
+		<p>Source: <a href="http://en.wikipedia.org/wiki/Beetroot">Wikipedia;</a> Last modified: <time>Aug 30, 2014</time></p>
 
 </body>
 </html>
