--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
 
 		<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-		<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”
-		<cite>— Jim Halpert</cite></blockquote>
+		<blockquote>
+			<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
+			<footer>
+				<cite>— Jim Halpert</cite>
+			</footer>
+		</blockquote>
 
-		<blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-		<cite>— Chris Pratt</cite></blockquote>
+		<blockquote>
+			<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</p>
+			<footer>
+				<cite>— Chris Pratt</cite></blockquote>
+			</footer>
 
 		<h2>Common varieties</h2>
 
@@ -37,13 +44,13 @@
 			<p>Serving size: 100 g</p>
 			<dl>
 				<dd>Energy:</dd>
-					<dt>180 kJ</dt>
+					<dt><data>180 kJ</data></dt>
 				<dd>Carbohydrates:</dd>
-					<dt>9.96 g</dt>
+					<dt><data>9.96 g</data></dt>
 				<dd>Fat:</dd>
-					<dt>0.18 g</dt>
+					<dt><data>0.18 g</data></dt>
 				<dd>Protein:</dd>
-					<dt>1.68 g</dt>
+					<dt><data>1.68 g</data></dt>
 			</dl>
 
 		<h2>Tags</h2>
