--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
+<div class="header">
 	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
+</div>
 
 		<img src="assets/beets-bundle.jpg" height="686" width="1024" alt="Beetroot Image">
 
@@ -43,14 +45,26 @@
 
 			<p>Serving size: 100 g</p>
 			<dl>
-				<dd>Energy:</dd>
-					<dt><data>180 kJ</data></dt>
-				<dd>Carbohydrates:</dd>
-					<dt><data>9.96 g</data></dt>
-				<dd>Fat:</dd>
-					<dt><data>0.18 g</data></dt>
-				<dd>Protein:</dd>
-					<dt><data>1.68 g</data></dt>
+				<dt>Energy:</dt>
+				<dd>
+					<data>180 kJ</data>
+				</dd>
+
+				<dt>Carbohydrates:</dt>
+				<dd>
+					<data>9.96 g</data>
+				</dd>
+
+				<dt>Fat:</dt>
+				<dd>
+					<data>0.18 g</data>
+				</dd>
+
+				<dt>Protein:</dt>
+				<dd>
+					<data>1.68 g</data>
+				</dd>
+
 			</dl>
 
 		<h2>Tags</h2>
