--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Exercise 0</title>
-  <link href="css/general.css">
+  <link rel="stylesheet" type="text/css" href="css/general.css">
 </head>
 <body>
 
