--- a/index.html
+++ b/index.html
@@ -7,31 +7,39 @@
 </head>
 <body>
 
-<div class="header">
+<header class="styling">
 	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
+</header>
+
+		<figure class="styling">
+			<img class="img-flex" src="assets/beets-bundle.jpg" height="686" width="1024" alt="Beetroot Image">
+		</figure>
+
+		<figcaption class="styling">
+			<p>A bundle of organic beets from a local farm food co-op program.</p>
+		</figcaption>
+
+<div class="styling">
+			<p>55 to 65 days are needed from germination to harvest of the root.</p>
+
+			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 </div>
 
-		<img src="assets/beets-bundle.jpg" height="686" width="1024" alt="Beetroot Image">
-
-		<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
-
-		<p>55 to 65 days are needed from germination to harvest of the root.</p>
-
-		<p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-
-		<blockquote>
+		<blockquote class="styling">
 			<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
 			<footer>
 				<cite>— Jim Halpert</cite>
 			</footer>
 		</blockquote>
 
-		<blockquote>
-			<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</p>
+		<blockquote class="styling">
+			<p>I have some weird habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
 			<footer>
-				<cite>— Chris Pratt</cite></blockquote>
+				<cite>— Chris Pratt</cite>
 			</footer>
+		</blockquote>
 
+		<div class="styling">
 		<h2>Common varieties</h2>
 
 		<ol>
@@ -42,6 +50,9 @@
 			<li>Early Wonder</li>
 		</ol>
 
+		</div>
+
+		<div class="styling">
 		<h2>Nutritional information</h2>
 
 			<p>Serving size: 100 g</p>
@@ -67,18 +78,21 @@
 				</dd>
 
 			</dl>
+		</div>
 
-		<h2>Tags</h2>
-		<ul>
-			<li><a>Crimson</a></li>
-			<li><a>Awesome</a></li>
-			<li><a>Pickle-able</a></li>
-			<li><a>Vegetable!</a></li>
-			<li><a>Delicious</a></li>
+
+<footer class="styling">
+		<ul class="tags">
+			<li><a href="#">Crimson</a></li>
+			<li><a href="#">Awesome</a></li>
+			<li><a href="#">Pickle-able</a></li>
+			<li><a href="#">Vegetable!</a></li>
+			<li><a href="#">Delicious</a></li>
 		</ul>
-
+		</div>
 
 		<p>Source: <a href="http://en.wikipedia.org/wiki/Beetroot">Wikipedia;</a> Last modified: <time>Aug 30, 2014</time></p>
+</footer>
 
 </body>
 </html>
